--- a/app/src/main/res/layout/activity_retrieve_item.xml
+++ b/app/src/main/res/layout/activity_retrieve_item.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.hp.stockmaintainence.RetrieveItem"
-    android:background="#A4C639">
+    android:background="#FBCEB1">
 
     <EditText
         android:layout_width="wrap_content"
