--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.hp.stockmaintainence.AddItem"
-    android:background="#FBCEB1">
+    android:background="@drawable/background">
 
     <EditText
         android:layout_width="wrap_content"
@@ -48,28 +48,25 @@
         android:id="@+id/editText4" />
 
     <EditText
+        android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Enter Item Id"
-        android:ems="10"
-        android:layout_marginTop="76dp"
-        android:id="@+id/editText"
-        android:layout_marginRight="21dp"
-        android:layout_marginEnd="21dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="57dp"
+        android:ems="10"
+        android:hint="Enter Item Id"
+        android:inputType="textPersonName" />
 
     <Button
-        android:text="Submit"
-        android:textSize="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/buttonsub"
         style="@android:style/Widget.Button"
-        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText4"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="34dp" />
+        android:layout_marginTop="29dp"
+        android:text="Submit"
+        android:textSize="15dp" />
 
 </RelativeLayout>
