--- a/app/src/main/res/layout/activity_update_item.xml
+++ b/app/src/main/res/layout/activity_update_item.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.hp.stockmaintainence.AddItem"
-    android:background="#FBCEB1">
+    android:background="@drawable/background">
 
     <EditText
         android:layout_width="wrap_content"
